tests/baselines/reference/privacyCheckExportAssignmentOnExportedGenericInterface2.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
privacyCheckExportAssignmentOnExportedGenericInterface2.ts(7,5): error TS2322: Type 'undefined' is not assignable to type 'Foo<T>'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== privacyCheckExportAssignmentOnExportedGenericInterface2.ts (1 errors) ====
    export = Foo;
    
    interface Foo<T> {
    }
    
    function Foo<T>(array: T[]): Foo<T> {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Foo<T>'.
    }
    
    namespace Foo {
        export var x = "hello";
    }
    